css/layout.css
/* Main Layout & Colors 🎨 - Adjust Colors to your liking*/


:root {
  --primary-yellow: #F8EC19;
  --primary-light-grey: #868A8E;
  --primary-dark-grey: #E8E8E8;
  --bzl-black: #2F2F2F;
  --bzl-white: white;
}

body {
  padding: 0;
  margin: 0;
  font-family: sans-serif;
  color: var(--bzl-black);
  background-color: var(--bzl-white);
}

button {
  cursor: pointer;
}

h1 {
  font-size: 55px;
}

h2 {
  font-size: 40px;
}

h3 {
  font-size: 32px;
}

p {
  font-size: 20px;
}

.contentDiv{
  width: calc(100% - 300px);
  margin: auto;
}

